# weatherbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  serialization.py  settings.py  telegram_bot.py  weather.py
handlers/: __init__.py  callback_handlers.py  command_handlers.py  message_handlers.py
keyboards/: __init__.py  change_forcast_day.py  inline_keyboard_choose_city.py
telegram_bot/: telegram_bot.py
tests/: test_weather_class.py
