[tool.poetry]
name = "weatherbot"
version = "0.1.0"
description = "Telegram bot"
authors = ["la-strole <la-strole.sovaleto48@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.7.0"
python-dotenv = "^0.21.0"
schedule = "^1.1.0"
requests = "^2.28.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest = "^7.1.3"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
